--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -132,10 +132,10 @@
     <script src="app/entities/natural-person-form/natural-person-form.state.js"></script>
     <script src="app/entities/natural-person-form/natural-person-form.service.js"></script>
     <script src="app/entities/natural-person-form/natural-person-form.search.service.js"></script>
-    <script src="app/entities/natural-person-form/natural-person-form.controller.js"></script>
+    <!--<script src="app/entities/natural-person-form/natural-person-form.controller.js"></script>-->
     <script src="app/entities/natural-person-form/natural-person-form-dialog.controller.js"></script>
-    <script src="app/entities/natural-person-form/natural-person-form-detail.controller.js"></script>
-    <script src="app/entities/natural-person-form/natural-person-form-delete-dialog.controller.js"></script>
+    <!--<script src="app/entities/natural-person-form/natural-person-form-detail.controller.js"></script>-->
+    <!--<script src="app/entities/natural-person-form/natural-person-form-delete-dialog.controller.js"></script>-->
     <script src="app/entities/natural-person/natural-person.state.js"></script>
     <script src="app/entities/natural-person/natural-person.service.js"></script>
     <script src="app/entities/natural-person/natural-person.search.service.js"></script>
