--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -143,13 +143,16 @@
     <script src="app/entities/natural-person/natural-person-dialog.controller.js"></script>
     <script src="app/entities/natural-person/natural-person-detail.controller.js"></script>
     <script src="app/entities/natural-person/natural-person-delete-dialog.controller.js"></script>
+    <script src="app/entities/legal-entity-form/legal-entity-form.state.js"></script>
+    <script src="app/entities/legal-entity-form/legal-entity-form.service.js"></script>
+    <script src="app/entities/legal-entity-form/legal-entity-form.search.service.js"></script>
+    <script src="app/entities/legal-entity-form/legal-entity-form-dialog.controller.js"></script>
     <script src="app/entities/legal-entity/legal-entity.state.js"></script>
     <script src="app/entities/legal-entity/legal-entity.service.js"></script>
     <script src="app/entities/legal-entity/legal-entity.search.service.js"></script>
     <script src="app/entities/legal-entity/legal-entity.controller.js"></script>
     <script src="app/entities/legal-entity/legal-entity-dialog.controller.js"></script>
     <script src="app/entities/legal-entity/legal-entity-detail.controller.js"></script>
-    <script src="app/entities/legal-entity/legal-entity-delete-dialog.controller.js"></script>
     <script src="app/entities/incidence/incidence.state.js"></script>
     <script src="app/entities/incidence/incidence.service.js"></script>
     <script src="app/entities/incidence/incidence.search.service.js"></script>
