--- a/src/main/webapp/app/entities/need/need-detail.html
+++ b/src/main/webapp/app/entities/need/need-detail.html
@@ -3,50 +3,52 @@
     <h2><span translate="volunteercrowdApp.need.detail.title">Need</span> {{vm.need.id}}</h2>
     <hr>
     <dl class="dl-horizontal">
-        <dt><span translate="volunteercrowdApp.need.title">Title</dt></dt>
+        <dt><span translate="volunteercrowdApp.need.title">Title</span></dt></dt>
         <dd>
-            <span>{{vm.need.title}}<span>
+            <span>{{vm.need.title}}</span>
         </dd>
         <hr>
-        <dt><span translate="volunteercrowdApp.need.description">Description</dt></dt>
+        <dt><span translate="volunteercrowdApp.need.description">Description</span></dt></dt>
         <dd>
-            <span>{{vm.need.description}}<span>
+            <span>{{vm.need.description}}</span>
         </dd>
         <hr>
-        <dt><span translate="volunteercrowdApp.need.category">Category</dt></dt>
+        <dt><span translate="volunteercrowdApp.need.category">Category</span></dt></dt>
         <dd>
-            <span>{{vm.need.category}}<span>
+            <span>{{vm.need.category}}</span>
         </dd>
         <hr>
-        <dt><span translate="volunteercrowdApp.need.deleted">Deleted</dt></dt>
+        <dt><span translate="volunteercrowdApp.need.deleted">Deleted</span></dt></dt>
         <dd>
-            <span>{{vm.need.deleted}}<span>
+            <span>{{vm.need.deleted}}</span>
         </dd>
         <hr>
-        <dt><span translate="volunteercrowdApp.need.location">Location</dt></dt>
+        <dt><span translate="volunteercrowdApp.need.location">Location</span></dt></dt>
         <dd>
-            <span>{{vm.need.location}}<span>
+            <span>{{vm.need.location}}</span>
         </dd>
         <hr>
-        <dt><span translate="volunteercrowdApp.need.creationDate">CreationDate</dt></dt>
+        <dt><span translate="volunteercrowdApp.need.creationDate">CreationDate</span></dt></dt>
         <dd>
             <span>{{vm.need.creationDate | date:'medium'}}</span>
         </dd>
         <hr>
-        <dt><span translate="volunteercrowdApp.need.modificationDate">ModificationDate</dt></dt>
+        <dt><span translate="volunteercrowdApp.need.modificationDate">ModificationDate</span></dt></dt>
         <dd>
             <span>{{vm.need.modificationDate | date:'medium'}}</span>
         </dd>
         <hr>
-        <dt><span translate="volunteercrowdApp.need.completed">Completed</dt></dt>
+        <dt><span translate="volunteercrowdApp.need.completed">Completed</span></dt></dt>
         <dd>
-            <span>{{vm.need.completed}}<span>
+            <span>{{vm.need.completed}}</span>
         </dd>
         <hr>
-        <dt><span translate="volunteercrowdApp.need.appUser">appUser</span></dt>
-        <dd>
-            <a ui-sref="app-user-detail({id:vm.need.appUser.id})">{{vm.need.appUser.id}}</a>
-        </dd>
+        <div ng-show="vm.useAppUser!=true">
+            <dt><span translate="volunteercrowdApp.need.appUser">appUser</span></dt>
+            <dd>
+                <a ui-sref="app-user-detail({id:vm.need.appUser.id})">{{vm.need.appUser.user.login}}</a>
+            </dd>
+        </div>
         <hr>
     </dl>
 
